[package]
name = "redmaple"
version = "0.1.0"
edition = "2021"
authors = ["Amir Alesheikh <amirhossein.alehseikh@gmail.com>"]
description = "RedMaple offers an oppinionated yet extremely flexible data modeling system based on events for backend applications"
homepage = "https://github.com/amirography/redmaple"
repository = "https://github.com/amirography/redmaple"
license = "Apache-2.0"
categories = ["data-structures"]
keywords = ["data_model", "event-sourcing", "events"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["v4"] }
